# simple-intent-detection

./: CMakeLists.txt  README.md  RulesManager.cpp  RulesManager.h  SentenceParser.cpp  SentenceParser.h  main.cpp  weather_rules
.circleci/: config.yml
assessment-tests/: CMakeLists.txt  fact_rules  main.cpp  tests.h  weather_city_rules  weather_rules
